# mastery-learning-v2

./: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: attempts.rs  attempts_crud.rs  images.rs  mod.rs  queries.rs  russian.rs  stats.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/utils/: id_generator.rs  mod.rs
src/components/forms/: AttemptForm.tsx  AttemptFormV2.tsx  ImageUpload.tsx
src/components/layouts/: BaseView.tsx  ViewCard.tsx  index.ts
src/components/providers/: ThemeProvider.tsx
src/components/ui/: theme-toggle.tsx
src/components/views/: AnalyticsView.tsx  DashboardView.tsx  DictionaryView.tsx  GuidelinesView.css  GuidelinesView.tsx  HistoryView.tsx  InsightsView.tsx  LearningView.tsx  MainView.tsx  ProblemDetailModal.tsx  ProgressView.tsx  ReviewView.tsx  RussianDrillView.tsx  RussianView.tsx  StatsView.tsx
src/components/widgets/: GuidelinesPanel.tsx  GuidelinesSidebar.tsx  MasteryProgress.tsx  PhaseTimer.tsx
src/hooks/: queries.ts  useFormPersistence.ts  useTimer.ts
src/lib/: TimerContext.tsx  api.ts  export.ts  queries.ts  types.ts  utils.ts
